# robinfood

./: LICENSE  README.md  pyproject.toml
requirements/: requirements.txt
tutorials/: README.md
tutorials/01.lxml/: 01_app.py  02_app_xpath.py  03_app_cssselect.py
tutorials/02.xpath/: 01_app.py  02_app_going_up.py  03_app_going_down.py
tutorials/03.css_selectors/: 01_app.py
tutorials/04.requests/: app.py
tutorials/05.projects/project1/: Makefile  README.md  app.py
tutorials/05.projects/project2/: README.md  app.py
