[tool.poetry]
name = "robinfood"
version = "0.0.1"
description = "web scraping food info from Spain retailers"
authors = ["Miguel Ángel Fernández Guerrero"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^2.0.2"
click = "^8.1.3"
cssselect = "^1.2.0"
lxml = "^4.9.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
